# lasp_ase

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
example/: BFGS.py  CuCHO.pot  ase_lasp.py  clean.sh  input.cif  lasp.in  run_ase.pbs  run_ase.sh
lasp_ase/: andersen_new.py  lasp.py  md_new.py  rmsd_new.py
